1/27/22: Created Git Repository, separate branch for first assignment, Makefile, CHANGELOG, README. Developed the map struct, started initializing map grid, and finished method to print map. Started development on seeding and growing different regions of the map.

1/28/22: Continued working on placing a growing the seeds in random selected locations. Completed random seeding and grow_all. Issues with grow function.

1/29/22: Finished grow function to fill out map using more recursive method. Added basic path, poke mart, poke center generation, and placement of extra terrain features like rocks and trees. Changed tall grass to a colon.

2/3/22: Updated spawning center and mart to take a probability to spawn them.

2/4/22: Updating path generation to handle if exits do not spawn and exit generation with preset exit values and random otherwise if not on edge

2/5/22: Started working on Map pointer array and updating spawn location and rate of poke centers and marts.

2/6/22: Finished array of Map pointers and allocating new maps based on surrounding map pointers.

2/7/22: Finished loop move between maps and flying to new locations without going out of bounds. Re-commented all my code.