@@ -1,4 +1,4 @@
 Create a map for the Pokemon game. The map size is 80 wide and 21 tall. There are exits on each cardinal direction edge (N, S, E, W). The map is randomized to consists of different regions, clearings and tall grass. The border edges are immovable boulders. The different characters are represent as follows, '%' is a boulder, ':' is tall grass, '.' is a clearing, '*' is desert, '#' is a path, '^' is tree and '-' is a rock. There are 5 style of regions clearings, tall grass, a mixture of the two, and desert. There are four different combinations of maps that can be generated which are: 2 clearings, 2 tall grass, 0 desert, and 1 mixed, 2 clearings, 2 tall grass, 0 desert, and 2 mixed, 2 clearings, 2 tall grass, 1 desert, and 1 mixed, and 2 clearings, 2 tall grass, 1 desert, and 2 mixed. This creates up to 7 different possible regions to spawn in a given map.
 
 
-Can now traverse through different maps by typing e, w, n, s, or f x y. The overall size of the map is 399 by 399. Each containing its own unique map that lines up its exits with the corresponding exit of adjacent maps. Furthermore, the spawn rate of poke centers and marts now is based on a probability lowering as one moves away from the center of the map. Additionally, centers and marts now spawn more randomly within a given map terrain. When on the edge of the overall map, exits will not spawn going out of bounds. Lastly, one can not move the map position out of legal bounds. If w is entered when on the west edge of the map, map does not change and reprints the current map.
+Can now traverse through different maps by typing e, w, n, s, or f x y. The overall size of the map is 399 by 399. Each containing its own unique map that lines up its exits with the corresponding exit of adjacent maps. Furthermore, the spawn rate of poke centers and marts now is based on a probability lowering as one moves away from the center of the map. Additionally, centers and marts now spawn more randomly within a given map terrain. When on the edge of the overall map, exits will not spawn going out of bounds. Lastly, one can not move the map position out of legal bounds. If w is entered when on the west edge of the map, map does not change and reprints the current map. Flying must be put in the format f, 1, 1 to fly to (1,1)
